Changes on the pages

--- a/kooplexhub/kooplex/hub/templates/app/index.html
+++ b/kooplexhub/kooplex/hub/templates/app/index.html
@@ -2,14 +2,20 @@
 
 {% block content %}
 
-<div class="jumbotron" style="padding-top: 10px; padding-bottom: 10px">
-  <h2>Kooplex</h2>
-  <p class="lead">An infrastructure for flexible collaboration</p>
+<div class="jumbotron" style="padding-top: 10px; padding-bottom: 10px; margin-top: 15px; box-shadow: 5px 10px 8px #888888;">
+  <div class="row">
+    <div class="col-md-6">
+      <img src="/static/app/content/compare-logo-transp.png" style="width: 300px;">
+    </div>
+    <div class="col-md-6" style="display: flex; justify-content: center; flex-direction: column; height: 40px; padding-top: 5%;">
+      <p class="lead">KOOPLEX - A platform for flexible collaboration</p>
+    </div>
+  </div>
 </div>
 
 {% include 'app/about.html' %}
 
-<div class="jumbotron container-fluid" style="padding-top: 10px; padding-bottom: 10px">
+<div class="jumbotron container-fluid" style="padding-top: 10px; padding-bottom: 10px; background-color: #bdbdbd; box-shadow: 5px 10px 8px #888888;">
 <div class="row">
     <div class="col-md-7">
     <div style="width: 100%;">
@@ -78,7 +84,8 @@
 </div>
 </div>
 
-<div class="jumbotron bs-docs-footer" style="font-size: 14px; padding-top: 20px; padding-bottom: 20px; color: #99979c; background-color: #2a2730;">
+<div class="jumbotron bs-docs-footer" style="font-size: 14px; padding-top: 20px; padding-bottom: 20px; color: #99979c; background-color: #2a2730; box-shadow: 5px 10px 8px #888888;">
+
   <p>Designed and built by <span style="text-decoration: line-through;"> some lazy guys</span> <b>the Kooplex Team</b>. We try to maintain it too! :)</p>
   <ul>
     <li>To reach the developers please send a message to - <strong>kooplex at complex.elte.hu.</strong></li>
