Changes on the pages

--- a/kooplexhub/kooplex/hub/templates/app/index.html
+++ b/kooplexhub/kooplex/hub/templates/app/index.html
@@ -8,7 +8,7 @@
       <img src="/static/app/content/logo-transparent.png" style="width: 300px;">
     </div>
     <div class="col-md-6" style="display: flex; justify-content: center; flex-direction: column; height: 40px; padding-top: 5%;">
-      <p class="lead">KOOPLEX - A platform for flexible collaboration</p>
+      <p class="lead">A platform for flexible collaboration</p>
     </div>
   </div>
 </div>
