--- a/kooplexhub/kooplex/hub/templates/project/settings.html
+++ b/kooplexhub/kooplex/hub/templates/project/settings.html
@@ -16,42 +16,42 @@
         </ul>
         <div class="tab-content">
           <div id="pane_collaboration-{{ project.id }}" class="tab-pane fade in active">
-            {% if project.owner = user %}
+            {% if project.owner == user %}
             {% include 'project/pane-collaboration.html' %}
             {% else %}
             <div class="alert alert-warning" role="alert">The owner of project {{ project.name }} is {{ project.owner.displayname }} ({{ project.owner.username }}). Please contact him/her to remove you from or add someone else to the collaboration.</div>
             {% endif %}
           </div>
           <div id="pane_image-{{ project.id }}" class="tab-pane fade">
-            {% if project.owner = user %}
+            {% if project.owner == user %}
             {% include 'project/pane-image.html' %}
             {% else %}
             <div class="alert alert-warning" role="alert">The owner of project {{ project.name }} is {{ project.owner.displayname }} ({{ project.owner.username }}). Please contact him/her to change the image.</div>
             {% endif %}
           </div>
           <div id="pane_funvolume-{{ project.id }}" class="tab-pane fade">
-            {% if project.owner = user %}
+            {% if project.owner == user %}
             {% include 'project/pane-functionalvolume.html' %}
             {% else %}
             <div class="alert alert-warning" role="alert">The owner of project {{ project.name }} is {{ project.owner.displayname }} ({{ project.owner.username }}). Please contact him/her to modify modules settings.</div>
             {% endif %}
           </div>
           <div id="pane_stgvolume-{{ project.id }}" class="tab-pane fade">
-            {% if project.owner = user %}
+            {% if project.owner == user %}
             {% include 'project/pane-storagevolume.html' %}
             {% else %}
             <div class="alert alert-warning" role="alert">The owner of project {{ project.name }} is {{ project.owner.displayname }} ({{ project.owner.username }}). Please contact him/her to attach or remove some storage volumes.</div>
             {% endif %}
           </div>
           <div id="pane_scope-{{ project.id }}" class="tab-pane fade">
-            {% if project.owner = user %}
+            {% if project.owner == user %}
             {% include 'project/pane-scope.html' %}
             {% else %}
             <div class="alert alert-warning" role="alert">Only the project owner {{ project.owner.displayname }} ({{ project.owner.username }}) can modify the scope.</div>
             {% endif %}
           </div>
           <div id="pane_deletion-{{ project.id }}" class="tab-pane fade">
-            {% if project.owner = user %}
+            {% if project.owner == user %}
             <div class="alert alert-danger" role="alert">All unshared data related to this project are lost by the deletion.</div>
             <p>Are you are sure about it?</p>
             <button type="submit" class="btn btn-danger" name="button" value="delete"> Really delete</button>
