--- a/kooplexhub/kooplex/hub/templates/report/password.html
+++ b/kooplexhub/kooplex/hub/templates/report/password.html
@@ -1,6 +1,6 @@
 <div id="report-password-{{ r.id }}" class="modal fade modal-dialog" role="dialog" style="position: fixed; top: 0px; ">
   <div class="modal-content">
-    <form id="report-password-form-{{ r.id }}" class="form-horizontal" action="{% url 'report-open' %}" method="post">
+    <form id="report-password-form-{{ r.id }}" class="form-horizontal" action="" method="post">
       {% csrf_token %}
       <input type="hidden" name="report_id" value="{{ r.id }}">
       <input type="hidden" name="pane" value="{{ this_pane }}">
