--- a/kooplexhub/hub/templates/project/partial.html
+++ b/kooplexhub/hub/templates/project/partial.html
@@ -4,6 +4,7 @@
 
 {% if caller == 'teacher' %}
   {% include 'project/settings.html' with enable_image=1 enable_modulevolume=1 enable_storagevolume=1 %}
+  {% include 'edu/assignments.html' %}
 {% endif %}
 
 {% if container.is_running  %}
@@ -32,17 +33,23 @@
       <strong>Description: </strong>{{ project.description }}<br>
 {% if caller == 'teacher' or caller == 'student' %}
       <strong>Flag: </strong>
-      {{ project.course|lookup_usercourseflags:user }}
+      {% for flag in project.course|lookup_usercourseflags:user %} {{ flag }}, {% endfor %}
 {% endif %}
       {% if caller == 'teacher' or caller == 'projectowner' %}
       <div style="float: right;">
-        <a href="{% url 'project:hide' project.id %}">
-          <button role="button" type="button" class="btn btn-info" data-toggle="tooltip" title="You can hide {{ project.name }} from your list. The related container will be stopped and removed." data-placement="top">
-            <span class="glyphicon glyphicon-eye-close" aria-hidden="true"></span>
+        {% if caller == 'teacher' %}
+        <a href="#" data-toggle="modal" data-target="#assignments-{{ project.id  }}">
+          <button role="button" type="button" class="btn btn-info" data-toggle="tooltip" title="You can create and manage assignments related to course {{ project.name }}." data-placement="top">
+            <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
           </button></a>
+        {% endif %} {% comment %} TODO: in else branch we can add reporting button {% endcomment %}
         <a href="#" data-toggle="modal" data-target="#project-settings-{{ project.id  }}">
           <button role="button" type="button" class="btn btn-info" data-toggle="tooltip" title="Settings of project {{ project.name }}. You can change the image, modify volume attachments." data-placement="top">
             <span class="glyphicon glyphicon-wrench" aria-hidden="true"></span>
+          </button></a>
+        <a href="{% url 'project:hide' project.id %}">
+          <button role="button" type="button" class="btn btn-info" data-toggle="tooltip" title="You can hide {{ project.name }} from your list. The related container will be stopped and removed." data-placement="top">
+            <span class="glyphicon glyphicon-eye-close" aria-hidden="true"></span>
           </button></a>
       </div>  <!-- float //-->
       {% endif %}
