--- a/kooplexhub/hub/templates/project/partial.html
+++ b/kooplexhub/hub/templates/project/partial.html
@@ -6,6 +6,9 @@
   {% include 'project/settings.html' with enable_image=1 enable_modulevolume=1 enable_storagevolume=1 %}
   {% include 'edu/assignments.html' %}
 {% endif %}
+{% if caller == 'student' %}
+  {% include 'edu/assignment_submission.html' %}
+{% endif %}
 
 {% if container.is_running  %}
 <div class="panel panel-success" style="margin-bottom: 3px">
@@ -50,6 +53,14 @@
         <a href="{% url 'project:hide' project.id %}">
           <button role="button" type="button" class="btn btn-info" data-toggle="tooltip" title="You can hide {{ project.name }} from your list. The related container will be stopped and removed." data-placement="top">
             <span class="glyphicon glyphicon-eye-close" aria-hidden="true"></span>
+          </button></a>
+      </div>  <!-- float //-->
+      {% endif %}
+      {% if caller == 'student' %} <!-- FIXME: only when active assignments are there -->
+      <div style="float: right;">
+        <a href="#" data-toggle="modal" data-target="#assignments-submit-{{ project.id  }}">
+          <button role="button" type="button" class="btn btn-info" data-toggle="tooltip" title="You can upload your assignments related to course {{ project.name }}." data-placement="top">
+            <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
           </button></a>
       </div>  <!-- float //-->
       {% endif %}
