--- a/kooplexhub/hub/templates/edu/assignments.html
+++ b/kooplexhub/hub/templates/edu/assignments.html
@@ -4,20 +4,29 @@
       <button type="button" class="close" data-dismiss="modal">&times;</button>
       <h4>Assignments related to course project <span style="font-weight: bold">{{ project.name }}</span></h4>
       <ul class="nav nav-tabs">
-        <li class="active"><a href="#pane_newassignment-{{ project.id }}" data-toggle="tab">Create a new assignment</a></li>
-        <li><a href="#pane_updateassignment-{{ project.id }}" data-toggle="tab">Update an existing assignment</a></li>
-        <li><a href="#pane_correctassignment-{{ project.id }}" data-toggle="tab">Correct assignments and feedback</a></li>
+        <li class="active"><a href="#pane_newassignment-{{ project.id }}" data-toggle="tab">Create</a></li>
+        <!--li><a href="#pane_updateassignment-{{ project.id }}" data-toggle="tab">Update</a></li-->
+        <li><a href="#pane_collectassignment-{{ project.id }}" data-toggle="tab">Collect</a></li>
+        <li><a href="#pane_correctassignment-{{ project.id }}" data-toggle="tab">Correct</a></li>
+        <li><a href="#pane_feedbackassignment-{{ project.id }}" data-toggle="tab">Feedback</a></li>
       </ul>
       <div class="tab-content">
         <div id="pane_newassignment-{{ project.id }}" class="tab-pane fade in active">
           {% include 'edu/pane-massassign.html' %}
         </div>
         <div id="pane_updateassignment-{{ project.id }}" class="tab-pane fade">
+          <div class="alert alert-warning" role="alert">TBA1.</div>
+        </div>
+        <div id="pane_collectassignment-{{ project.id }}" class="tab-pane fade">
           <div class="alert alert-warning" role="alert">TBA2.</div>
         </div>
         <div id="pane_correctassignment-{{ project.id }}" class="tab-pane fade">
-          <div class="alert alert-warning" role="alert">TBA2.</div>
+          <div class="alert alert-warning" role="alert">Select user assignments to correct. During correction phase students are prevented from resubmit and update their given assignment.</div>
           {% include 'edu/pane-correct.html' %}
+        </div>
+        <div id="pane_feedbackassignment-{{ project.id }}" class="tab-pane fade">
+          <div class="alert alert-warning" role="alert">Select user assignments you finished correcting.</div>
+          {% include 'edu/pane-feedback.html' %}
         </div>
       </div>     <!-- tab-content -->
     </div>       <!-- modal-body -->
