--- a/kooplexhub/hub/templates/edu/assignment_submission.html
+++ b/kooplexhub/hub/templates/edu/assignment_submission.html
@@ -7,7 +7,13 @@
         <h4>Assignments related to course project <span style="font-weight: bold">{{ project.name }}</span></h4>
         <div class="alert alert-warning" role="alert">Select assignment folders to submit.</div>
         {% for b in project.course|lookup_userassignmentbindings:user %}
-          <br><input type="checkbox" checked name="userassignmentbindingid" value="{{ b.id }}"/> {{ b.assignment.name }}
+          <br><input type="checkbox" 
+               {% if b.submittable %}
+               checked
+               {% else %}
+               disabled
+               {% endif %}
+               name="userassignmentbindingid" value="{{ b.id }}"/> {{ b.assignment.name }} {{ b.state_long }}
         {% endfor %}
         <div class="modal-footer">
           <button type="submit" class="btn btn-default" name="button" value="apply"> Submit</button>
