--- a/kooplexhub/hub/templates/edu/pane-feedback.html
+++ b/kooplexhub/hub/templates/edu/pane-feedback.html
@@ -4,6 +4,6 @@
     <br><input type="checkbox" name="userassignmentbindingid" value="{{ b.id }}"/> {{ b.assignment.flag }} {{ b.assignment.name }} {{ b.user.username }}
   {% endfor %}
   <div class="modal-footer">
-    <button type="submit" class="btn btn-default" name="button" value="apply"> Submit</button>
+    <button type="submit" class="btn btn-default" name="button" value="apply"> Feedback</button>
   </div>
 </form>
