--- a/kooplexhub/hub/templates/edu/pane-correct.html
+++ b/kooplexhub/hub/templates/edu/pane-correct.html
@@ -1,6 +1,7 @@
-<form id="assignments-correctform-{{ project.id }}" class="form-horizontal" action="{% url 'assignment:correct' %}" method="post">
+<form id="assignments-correctform-{{ course.id }}" class="form-horizontal" action="{% url 'assignment:correct' %}" method="post">
   {% csrf_token %}
-  {% for b in project.course|lookup_userassignmentbindings_submitted:user %}
+  <input type="hidden" name="course_id" value="{{course.id }}" />
+  {% for b in course|lookup_userassignmentbindings_submitted:user %}
     <br><input type="checkbox" name="userassignmentbindingid" value="{{ b.id }}"/> {{ b.assignment.flag }} {{ b.assignment.name }} {{ b.user.username }}
   {% endfor %}
   <div class="modal-footer">
