--- a/kooplexhub/hub/templates/project/partial.html
+++ b/kooplexhub/hub/templates/project/partial.html
@@ -4,9 +4,6 @@
 
 {% if caller == 'teacher' %}
   {% include 'project/settings.html' with enable_image=1 enable_modulevolume=1 enable_storagevolume=1 %}
-{% comment %}
-  {% include 'edu/assignments.html' %}
-{% endcomment %}
 {% endif %}
 {% if caller == 'student' %}
   {% include 'edu/assignment_submission.html' %}
@@ -43,8 +40,7 @@
       {% if caller == 'teacher' or caller == 'projectowner' %}
       <div style="float: right;">
         {% if caller == 'teacher' %}
-        <!-- a href="#" data-toggle="modal" data-target="#assignments-{{ project.id  }}" -->
-        <a href="{% url 'teaching:assignment' project.id %}">
+        <a href="{% url 'teaching:assignment' project.course.id %}">
           <button role="button" type="button" class="btn btn-info" data-toggle="tooltip" title="You can create and manage assignments related to course {{ project.name }}." data-placement="top">
             <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
           </button></a>
