--- a/kooplexhub/hub/templates/edu/assignments.html
+++ b/kooplexhub/hub/templates/edu/assignments.html
@@ -6,7 +6,7 @@
 <h4>Assignments related to course <span style="font-weight: bold">{{ course.courseid }}</span></h4>
 <ul class="nav nav-tabs">
   <li class="active"><a href="#pane_newassignment-{{ course.id }}" data-toggle="tab">Create</a></li>
-  <!--li><a href="#pane_updateassignment-{{ course.id }}" data-toggle="tab">Update</a></li-->
+  <li><a href="#pane_updateassignment-{{ course.id }}" data-toggle="tab">Update</a></li>
   <li><a href="#pane_collectassignment-{{ course.id }}" data-toggle="tab">Collect</a></li>
   <li><a href="#pane_correctassignment-{{ course.id }}" data-toggle="tab">Correct</a></li>
   <li><a href="#pane_feedbackassignment-{{ course.id }}" data-toggle="tab">Feedback</a></li>
@@ -22,11 +22,9 @@
     {% include 'edu/pane-collect.html' %}
   </div>
   <div id="pane_correctassignment-{{ course.id }}" class="tab-pane fade">
-    <div class="alert alert-warning" role="alert">Select user assignments to correct. During correction phase students are prevented from resubmit and update their given assignment.</div>
     {% include 'edu/pane-correct.html' %}
   </div>
   <div id="pane_feedbackassignment-{{ course.id }}" class="tab-pane fade">
-    <div class="alert alert-warning" role="alert">Select user assignments you finished correcting.</div>
     {% include 'edu/pane-feedback.html' %}
   </div>
 </div>     <!-- tab-content -->
