Introduced the notion of massassignment Can assign per user basis

--- a/kooplexhub/hub/templates/edu/pane-massassign.html
+++ b/kooplexhub/hub/templates/edu/pane-massassign.html
@@ -17,6 +17,8 @@
     TBA<br>
     <label>Expires at:</label>
     TBA<br>
+    <label>Assign for all student:</label>
+    <input type="checkbox" checked name="massassignment" value="True"/><br>
     <label>Student can submit earlier:</label>
     <input type="checkbox" checked name="cansubmit" value="True"/><br>
     <label>Course flags:</label>
