--- a/kooplexhub/hub/templates/edu/pane-correct.html
+++ b/kooplexhub/hub/templates/edu/pane-correct.html
@@ -11,6 +11,6 @@
       <button type="submit" class="btn btn-default" name="button" value="apply"> Correcting</button>
     </div>
   {% else %}
-    <div class="alert alert-danger" role="alert">There are no assignments you can collect.</div>
+    <div class="alert alert-warning" role="warning">There are no assignments you can collect.</div>
   {% endif %}
 </form>
