--- a/kooplexhub/hub/templates/edu/pane-bind.html
+++ b/kooplexhub/hub/templates/edu/pane-bind.html
@@ -19,6 +19,6 @@
       <button type="submit" class="btn btn-default" name="button" value="apply"> Bind</button>
     </div>
   {% else %}
-    <div class="alert alert-danger" role="alert">There are no candidate assignments to bind yet.</div>
+    <div class="alert alert-warning" role="warning">There are no candidate assignments to bind yet.</div>
   {% endif %}
 </form>
