--- a/kooplexhub/hub/templates/edu/pane-collect.html
+++ b/kooplexhub/hub/templates/edu/pane-collect.html
@@ -17,6 +17,6 @@
       <button type="submit" class="btn btn-default" name="button" value="apply"> Collect</button>
     </div>
   {% else %}
-    <div class="alert alert-danger" role="alert">There are no candidate assignments to collect yet.</div>
+    <div class="alert alert-warning" role="warning">There are no candidate assignments to collect yet.</div>
   {% endif %}
 </form>
