--- a/kooplexhub/hub/templates/edu/pane-feedback.html
+++ b/kooplexhub/hub/templates/edu/pane-feedback.html
@@ -9,6 +9,6 @@
       <button type="submit" class="btn btn-default" name="button" value="apply"> Feedback</button>
     </div>
   {% else %}
-    <div class="alert alert-danger" role="alert">There are no assignments being corrected.</div>
+    <div class="alert alert-warning" role="warning">There are no assignments being corrected.</div>
   {% endif %}
 </form>
